--- a/index.html
+++ b/index.html
@@ -216,7 +216,13 @@
         });
 
         function updateCharts() {
-            const data = JSON.parse(localStorage.getItem('usageData')) || [];
+            // Dodanie stałych danych
+            const data = [
+                { date: '2023-12-11', gas: 2850, electricity: 124 },
+                { date: '2023-12-12', gas: 2863, electricity: 140 },
+                { date: '2023-12-13', gas: 2873, electricity: 165 }
+            ];
+
             if (data.length === 0) return;
 
             const allDates = Array.from(new Set(data.map(entry => entry.date))).sort();
@@ -243,18 +249,10 @@
                 }
             });
 
-            const dailyGasUsage = [];
-            const dailyElectricityUsage = [];
+            const ctx = document.getElementById('usageChart').getContext('2d');
+            const ctx2 = document.getElementById('dailyUsageChart').getContext('2d');
 
-            for (let i = 1; i < gasData.length; i++) {
-                dailyGasUsage.push(gasData[i] - gasData[i - 1]);
-                dailyElectricityUsage.push(electricityData[i] - electricityData[i - 1]);
-            }
-
-            const usageChartCtx = document.getElementById('usageChart').getContext('2d');
-            const dailyUsageChartCtx = document.getElementById('dailyUsageChart').getContext('2d');
-            
-            const usageChart = new Chart(usageChartCtx, {
+            const usageChart = new Chart(ctx, {
                 type: 'line',
                 data: {
                     labels: labels,
@@ -262,45 +260,91 @@
                         {
                             label: 'Zużycie gazu',
                             data: gasData,
-                            borderColor: '#FFD700', // Żółty
-                            borderWidth: 2,
-                            fill: false
+                            borderColor: 'blue',
+                            backgroundColor: 'rgba(0, 0, 255, 0.1)',
+                            fill: true
                         },
                         {
                             label: 'Zużycie prądu',
                             data: electricityData,
-                            borderColor: '#1E90FF', // Niebieski
-                            borderWidth: 2,
-                            fill: false
+                            borderColor: 'yellow',
+                            backgroundColor: 'rgba(255, 255, 0, 0.1)',
+                            fill: true
                         }
                     ]
                 }
             });
 
-            const dailyUsageChart = new Chart(dailyUsageChartCtx, {
+            const dailyGasData = [];
+            const dailyElectricityData = [];
+            let dailyLabels = [];
+
+            data.forEach((entry, index) => {
+                if (index > 0) {
+                    const prevEntry = data[index - 1];
+                    dailyLabels.push(entry.date);
+                    dailyGasData.push(entry.gas - prevEntry.gas);
+                    dailyElectricityData.push(entry.electricity - prevEntry.electricity);
+                }
+            });
+
+            const dailyUsageChart = new Chart(ctx2, {
                 type: 'line',
                 data: {
-                    labels: labels.slice(1),
+                    labels: dailyLabels,
                     datasets: [
                         {
                             label: 'Dzienne zużycie gazu',
-                            data: dailyGasUsage,
-                            borderColor: '#FFD700', // Żółty
-                            borderWidth: 2,
-                            fill: false
+                            data: dailyGasData,
+                            borderColor: 'blue',
+                            backgroundColor: 'rgba(0, 0, 255, 0.1)',
+                            fill: true
                         },
                         {
                             label: 'Dzienne zużycie prądu',
-                            data: dailyElectricityUsage,
-                            borderColor: '#1E90FF', // Niebieski
-                            borderWidth: 2,
-                            fill: false
+                            data: dailyElectricityData,
+                            borderColor: 'yellow',
+                            backgroundColor: 'rgba(255, 255, 0, 0.1)',
+                            fill: true
                         }
                     ]
                 }
             });
 
-            generateTable(data);
+            renderTable('dataTable', data);
+        }
+
+        function renderTable(elementId, data) {
+            const tableContainer = document.getElementById(elementId);
+            tableContainer.innerHTML = '';
+
+            if (data.length === 0) return;
+
+            const table = document.createElement('table');
+            const thead = document.createElement('thead');
+            const tbody = document.createElement('tbody');
+
+            const headerRow = document.createElement('tr');
+            ['Data', 'Stan licznika gazu', 'Stan licznika prądu'].forEach(text => {
+                const th = document.createElement('th');
+                th.textContent = text;
+                headerRow.appendChild(th);
+            });
+            thead.appendChild(headerRow);
+
+            data.forEach(entry => {
+                const row = document.createElement('tr');
+                ['date', 'gas', 'electricity'].forEach(field => {
+                    const td = document.createElement('td');
+                    td.textContent = entry[field];
+                    row.appendChild(td);
+                });
+                tbody.appendChild(row);
+            });
+
+            table.appendChild(thead);
+            table.appendChild(tbody);
+            tableContainer.appendChild(table);
         }
 
         function filterAndUpdateCharts() {
@@ -312,215 +356,95 @@
                 return;
             }
 
-            let data = JSON.parse(localStorage.getItem('usageData')) || [];
-            data = data.filter(entry => entry.date >= startDate && entry.date <= endDate);
+            const data = JSON.parse(localStorage.getItem('usageData')) || [];
+            const filteredData = data.filter(entry => entry.date >= startDate && entry.date <= endDate);
 
-            if (data.length === 0) {
-                alert("Brak danych w wybranym zakresie.");
+            if (filteredData.length === 0) {
+                alert("Brak danych dla wybranego zakresu.");
                 return;
             }
 
-            const allDates = Array.from(new Set(data.map(entry => entry.date))).sort();
-            const dataMap = new Map(data.map(entry => [entry.date, { gas: entry.gas, electricity: entry.electricity }]));
+            const filteredLabels = Array.from(new Set(filteredData.map(entry => entry.date))).sort();
+            const filteredDataMap = new Map(filteredData.map(entry => [entry.date, { gas: entry.gas, electricity: entry.electricity }]));
 
-            const gasData = [];
-            const electricityData = [];
-            const labels = [];
+            const filteredGasData = [];
+            const filteredElectricityData = [];
 
-            let prevGas = 0;
-            let prevElectricity = 0;
-
-            allDates.forEach(date => {
-                labels.push(date);
-                if (dataMap.has(date)) {
-                    const { gas, electricity } = dataMap.get(date);
-                    gasData.push(gas);
-                    electricityData.push(electricity);
-                    prevGas = gas;
-                    prevElectricity = electricity;
-                } else {
-                    gasData.push(prevGas);
-                    electricityData.push(prevElectricity);
+            filteredLabels.forEach(date => {
+                if (filteredDataMap.has(date)) {
+                    const { gas, electricity } = filteredDataMap.get(date);
+                    filteredGasData.push(gas);
+                    filteredElectricityData.push(electricity);
                 }
             });
 
-            const dailyGasUsage = [];
-            const dailyElectricityUsage = [];
+            const ctxFiltered = document.getElementById('filteredUsageChart').getContext('2d');
+            const ctxFiltered2 = document.getElementById('filteredDailyUsageChart').getContext('2d');
 
-            for (let i = 1; i < gasData.length; i++) {
-                dailyGasUsage.push(gasData[i] - gasData[i - 1]);
-                dailyElectricityUsage.push(electricityData[i] - electricityData[i - 1]);
-            }
-
-            const filteredUsageChartCtx = document.getElementById('filteredUsageChart').getContext('2d');
-            const filteredDailyUsageChartCtx = document.getElementById('filteredDailyUsageChart').getContext('2d');
-            
-            const filteredUsageChart = new Chart(filteredUsageChartCtx, {
+            const filteredUsageChart = new Chart(ctxFiltered, {
                 type: 'line',
                 data: {
-                    labels: labels,
+                    labels: filteredLabels,
                     datasets: [
                         {
-                            label: 'Zużycie gazu',
-                            data: gasData,
-                            borderColor: '#FFD700', // Żółty
-                            borderWidth: 2,
-                            fill: false
+                            label: 'Zużycie gazu (przefiltrowane)',
+                            data: filteredGasData,
+                            borderColor: 'blue',
+                            backgroundColor: 'rgba(0, 0, 255, 0.1)',
+                            fill: true
                         },
                         {
-                            label: 'Zużycie prądu',
-                            data: electricityData,
-                            borderColor: '#1E90FF', // Niebieski
-                            borderWidth: 2,
-                            fill: false
+                            label: 'Zużycie prądu (przefiltrowane)',
+                            data: filteredElectricityData,
+                            borderColor: 'yellow',
+                            backgroundColor: 'rgba(255, 255, 0, 0.1)',
+                            fill: true
                         }
                     ]
                 }
             });
 
-            const filteredDailyUsageChart = new Chart(filteredDailyUsageChartCtx, {
+            const filteredDailyGasData = [];
+            const filteredDailyElectricityData = [];
+            let filteredDailyLabels = [];
+
+            filteredData.forEach((entry, index) => {
+                if (index > 0) {
+                    const prevEntry = filteredData[index - 1];
+                    filteredDailyLabels.push(entry.date);
+                    filteredDailyGasData.push(entry.gas - prevEntry.gas);
+                    filteredDailyElectricityData.push(entry.electricity - prevEntry.electricity);
+                }
+            });
+
+            const filteredDailyUsageChart = new Chart(ctxFiltered2, {
                 type: 'line',
                 data: {
-                    labels: labels.slice(1),
+                    labels: filteredDailyLabels,
                     datasets: [
                         {
-                            label: 'Dzienne zużycie gazu',
-                            data: dailyGasUsage,
-                            borderColor: '#FFD700', // Żółty
-                            borderWidth: 2,
-                            fill: false
+                            label: 'Dzienne zużycie gazu (przefiltrowane)',
+                            data: filteredDailyGasData,
+                            borderColor: 'blue',
+                            backgroundColor: 'rgba(0, 0, 255, 0.1)',
+                            fill: true
                         },
                         {
-                            label: 'Dzienne zużycie prądu',
-                            data: dailyElectricityUsage,
-                            borderColor: '#1E90FF', // Niebieski
-                            borderWidth: 2,
-                            fill: false
+                            label: 'Dzienne zużycie prądu (przefiltrowane)',
+                            data: filteredDailyElectricityData,
+                            borderColor: 'yellow',
+                            backgroundColor: 'rgba(255, 255, 0, 0.1)',
+                            fill: true
                         }
                     ]
                 }
             });
 
-            generateFilteredTable(data);
+            renderTable('filteredDataTable', filteredData);
         }
 
-        function generateTable(data) {
-            const tableContainer = document.getElementById('dataTable');
-            tableContainer.innerHTML = '';
-
-            if (data.length === 0) {
-                tableContainer.innerHTML = '<p>Brak danych do wyświetlenia.</p>';
-                return;
-            }
-
-            const table = document.createElement('table');
-            const thead = document.createElement('thead');
-            const tbody = document.createElement('tbody');
-
-            const headerRow = document.createElement('tr');
-            ['Data', 'Licznik Gazu', 'Licznik prądu', 'Zużycie gazu', 'Zużycie prądu'].forEach(text => {
-                const th = document.createElement('th');
-                th.textContent = text;
-                headerRow.appendChild(th);
-            });
-
-            thead.appendChild(headerRow);
-            table.appendChild(thead);
-
-            let prevGas = 0;
-            let prevElectricity = 0;
-
-            data.forEach((entry, index) => {
-                const row = document.createElement('tr');
-                const dateCell = document.createElement('td');
-                dateCell.textContent = entry.date;
-                row.appendChild(dateCell);
-
-                const gasCell = document.createElement('td');
-                gasCell.textContent = entry.gas;
-                row.appendChild(gasCell);
-
-                const electricityCell = document.createElement('td');
-                electricityCell.textContent = entry.electricity;
-                row.appendChild(electricityCell);
-
-                const dailyGasCell = document.createElement('td');
-                dailyGasCell.textContent = index === 0 ? 'N/A' : (entry.gas - prevGas).toFixed(2);
-                row.appendChild(dailyGasCell);
-
-                const dailyElectricityCell = document.createElement('td');
-                dailyElectricityCell.textContent = index === 0 ? 'N/A' : (entry.electricity - prevElectricity).toFixed(2);
-                row.appendChild(dailyElectricityCell);
-
-                tbody.appendChild(row);
-
-                prevGas = entry.gas;
-                prevElectricity = entry.electricity;
-            });
-
-            table.appendChild(tbody);
-            tableContainer.appendChild(table);
-        }
-
-        function generateFilteredTable(data) {
-            const tableContainer = document.getElementById('filteredDataTable');
-            tableContainer.innerHTML = '';
-
-            if (data.length === 0) {
-                tableContainer.innerHTML = '<p>Brak danych do wyświetlenia.</p>';
-                return;
-            }
-
-            const table = document.createElement('table');
-            const thead = document.createElement('thead');
-            const tbody = document.createElement('tbody');
-
-            const headerRow = document.createElement('tr');
-            ['Data', 'Licznik gazu', 'Licznik prądu', 'Zużycie gazu', 'Zużycie prądu'].forEach(text => {
-                const th = document.createElement('th');
-                th.textContent = text;
-                headerRow.appendChild(th);
-            });
-
-            thead.appendChild(headerRow);
-            table.appendChild(thead);
-
-            let prevGas = 0;
-            let prevElectricity = 0;
-
-            data.forEach((entry, index) => {
-                const row = document.createElement('tr');
-                const dateCell = document.createElement('td');
-                dateCell.textContent = entry.date;
-                row.appendChild(dateCell);
-
-                const gasCell = document.createElement('td');
-                gasCell.textContent = entry.gas;
-                row.appendChild(gasCell);
-
-                const electricityCell = document.createElement('td');
-                electricityCell.textContent = entry.electricity;
-                row.appendChild(electricityCell);
-
-                const dailyGasCell = document.createElement('td');
-                dailyGasCell.textContent = index === 0 ? 'N/A' : (entry.gas - prevGas).toFixed(2);
-                row.appendChild(dailyGasCell);
-
-                const dailyElectricityCell = document.createElement('td');
-                dailyElectricityCell.textContent = index === 0 ? 'N/A' : (entry.electricity - prevElectricity).toFixed(2);
-                row.appendChild(dailyElectricityCell);
-
-                tbody.appendChild(row);
-
-                prevGas = entry.gas;
-                prevElectricity = entry.electricity;
-            });
-
-            table.appendChild(tbody);
-            tableContainer.appendChild(table);
-        }
-
-        window.onload = updateCharts;
+        // Początkowe wywołanie, aby załadować dane przy pierwszym uruchomieniu
+        updateCharts();
     </script>
 </body>
 </html>
