--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
     { date: '2024-09-13', gas: 4210, electricity: 4286 },
     { date: '2024-09-14', gas: 4214, electricity: 4313 },
     { date: '2024-09-15', gas: 4216, electricity: 4330 }
-            ];
+           ];
 
             if (data.length === 0) return;
 
@@ -505,26 +505,47 @@
             const tbody = document.createElement('tbody');
 
             const headerRow = document.createElement('tr');
-            ['Data', 'Stan licznika gazu', 'Stan licznika prądu'].forEach(text => {
+            ['Data', 'Stan licznika gazu', 'Stan licznika prądu', 'Dzienne zużycie gazu', 'Dzienne zużycie prądu'].forEach(text => {
                 const th = document.createElement('th');
                 th.textContent = text;
                 headerRow.appendChild(th);
             });
             thead.appendChild(headerRow);
 
-            data.forEach(entry => {
+            let prevGas = 0;
+            let prevElectricity = 0;
+
+            data.forEach((entry, index) => {
                 const row = document.createElement('tr');
                 ['date', 'gas', 'electricity'].forEach(field => {
                     const td = document.createElement('td');
                     td.textContent = entry[field];
                     row.appendChild(td);
                 });
+
+                if (index > 0) {
+                    const dailyGas = entry.gas - data[index - 1].gas;
+                    const dailyElectricity = entry.electricity - data[index - 1].electricity;
+                    row.appendChild(createCell(dailyGas));
+                    row.appendChild(createCell(dailyElectricity));
+                } else {
+                    row.appendChild(createCell('-'));
+                    row.appendChild(createCell('-'));
+                }
                 tbody.appendChild(row);
+                prevGas = entry.gas;
+                prevElectricity = entry.electricity;
             });
 
             table.appendChild(thead);
             table.appendChild(tbody);
             tableContainer.appendChild(table);
+        }
+
+        function createCell(content) {
+            const td = document.createElement('td');
+            td.textContent = content;
+            return td;
         }
 
         function filterAndUpdateCharts() {
